cabal-version:      >=1.10
name:               haskell-kata
version:            0.1.0.0
license-file:       LICENSE
author:             Flavio Corpa
maintainer:         flavio.corpa@47deg.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Codewars.Kata.Deadfish
  other-modules:
    Codewars.Kata.BitCounting
    Codewars.Kata.Braces
    Codewars.Kata.DecodeMorse
    Codewars.Kata.DecodeMorse.Preload
    Codewars.Kata.FactorialComposition
    Codewars.Kata.MissingElement
    Codewars.Kata.MultiplesOf3And5

  build-depends:
      base
    , containers
    , megaparsec
    , mtl
    , split

  default-language: Haskell2010
